commit with repository direction

--- a/perspectives/perspectives.tex
+++ b/perspectives/perspectives.tex
@@ -1,9 +1,9 @@
 \begin{frame}{Perspectives}
     \qrset{link, height=5.5cm}
-    \qrcode{https://github.com/SaulDiazInfante/Baemer-SIAM-Section-Mexico}
+    \qrcode{https://github.com/SaulDiazInfante/ColoquioOaxaca2020.git}
     \vspace*{5mm}
-    \href{https://github.com/SaulDiazInfante/Baemer-SIAM-Section-Mexico}{%
-    https://github.com/SaulDiazInfante/Baemer-SIAM-Section-Mexico
+    \href{https://github.com/SaulDiazInfante/ColoquioOaxaca2020.git}{%
+    https://github.com/SaulDiazInfante/ColoquioOaxaca2020.git
     }
     \begin{textblock*}{60mm}(75mm, 45mm)
         \Huge{Thank You !!!}
